--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Consultas.cs" />
+    <Compile Include="e.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
